--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </div>
           <div class="footer--link--items">
             <h2 href="/">Follow Me</h2>
-            <a href="/">Customers</a>
+            <a href="/">Social media</a>
             
           </div>
         </div>
@@ -87,7 +87,7 @@
         <div class="footer--link--wrapper">
 
           <div class="footer--link--items">
-            <a href="/">© BabyGirl 2021.</a>
+            <a href="/">© EstherMadu 2021.</a>
             <a href="/"> All rights reserved</a> 
             
           </div>
