--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <title>Parcel Sandbox</title>
+     
     <meta charset="UTF-8" name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
 
+
   <body>
-    <header class="navbar">
+    <header class="navbar" id = "header">
       <div class="navbar--container">
         <div id="logo">
           <span id="circle"> </span>
@@ -30,7 +32,7 @@
           </li>
           <span class="line-image"></span>
           <li class="navbar--item">
-            <a href="#Customers" class="navbar--links" id="customerss-page">Contacts</a>
+            <a href="src/contact-page/contact.html"class="navbar--links" id="contact-page">Contacts</a>
           </li>
         </ul>
       </div>
@@ -45,9 +47,9 @@
           <h1>Hello</h1>
           <h2>A Bit About Me</h2>
           <p>
-            I'm a paragraph. Click here to add your own text and edit me. I’m a
-            great place for you to tell a story and let your users know a little
-            more about you.
+              I'm a paragraph. Click here to add your own text and edit me. I’m a
+              great place for you to tell a story and let your users know a little
+              more about you.
           </p>
           <div class = "circles">
             <div class="res-circley">
@@ -57,7 +59,7 @@
               <div class="circle-txt">Projects</div>
             </div>
             <div class="res-circleb">
-              <div class="circle-txt">Contact</div>
+            <a href="src/contact-page/contact.html" class="circle-txt">Contact</a>   
             </div>
           </div>
         </div>
