--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Parcel Sandbox</title>
+    <title>Esther's Resume</title>
      
     <meta charset="UTF-8" name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/styles.css" />
